kubernetes/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/single/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: mongo
  name: mongo
  namespace: aqra
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker/single/docker-compose.yml
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/aqra-network: "true"
        io.kompose.service: mongo
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: mongo-secret
          image: aqra_mongo
          imagePullPolicy: Never
          livenessProbe:
            exec:
              command:
                - mongosh
                - --eval
                - db.adminCommand("ping")
            failureThreshold: 1
            initialDelaySeconds: 60
            periodSeconds: 300
            timeoutSeconds: 60
          name: mongo
          ports:
            - containerPort: 27017
          resources: { }
          volumeMounts:
            - mountPath: /data/db
              name: mongodata
      securityContext:
        runAsNonRoot: true
      serviceAccountName: ""
      volumes:
        - name: mongodata
          persistentVolumeClaim:
            claimName: mongodata-pvc
