kubernetes/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mongo
  name: mongo
  namespace: aqra
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo
