kubernetes/aqra-network-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aqra-network
  namespace: aqra
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/aqra-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/aqra-network: "true"
