kubernetes/network-networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: network
  namespace: aqra
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/network: 'true'
  podSelector:
    matchLabels:
      io.kompose.network/network: 'true'
