kubernetes/resources.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aqra
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/single/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: flask
  name: flask
  namespace: aqra
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: flask
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker/single/docker-compose.yml
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: mongo
  name: mongo
  namespace: aqra
spec:
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: flask-ingress
  namespace: aqra
spec:
  rules:
    - host: aqra.feit.ukim.edu.mk
      http:
        paths:
          - backend:
              service:
                name: flask
                port:
                  number: 80
            path: /api
            pathType: Prefix
  tls:
    - hosts:
        - aqra.feit.ukim.edu.mk
      secretName: aqra-tls
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: aqra-network
  namespace: aqra
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/aqra-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/aqra-network: "true"
